--- a/src/GoogleAppEngine/GoogleAppEngine.csproj
+++ b/src/GoogleAppEngine/GoogleAppEngine.csproj
@@ -36,8 +36,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\build\AssemblyProjectInfo.cs">
+      <Link>Properties\AssemblyProjectInfo.cs</Link>
+    </Compile>
     <Compile Include="Application.cs" />
-    <Compile Include="Properties\AssemblyVersionInfo.cs" />
     <Compile Include="DevelopmentWebServer.cs" />
     <Compile Include="GoogleAppEngine.cs" />
     <Compile Include="Prefrences.cs" />
@@ -52,4 +54,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PreBuildEvent>$(SolutionDir)..\tools\nant\NAnt -buildfile:$(SolutionDir)..\build\update_token.build</PreBuildEvent>
+  </PropertyGroup>
 </Project>
